# dlt-source-notion

./: .gitignore  .yamlfmt  README.md  devenv.nix  notion_pipeline.py  pyproject.toml  settings.json
.github/workflows/: test.yml
dlt_source_notion/: __init__.py  client.py  type_adapters.py
dlt_source_notion/model/: notion_2022_06_28.py
