[project]
name = "dlt-source-notion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt>=1.8.1",
    "pydantic-api-sdk-notion>=0.0.34",
    "pydantic>=2.10.6",
]
dynamic = ["authors", "classifiers", "version", "description"]

[project.optional-dependencies]
show = [
    "dlt[duckdb]>=1.8.1",
    "streamlit>=1.41.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.black]
include = '.*py$'

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
