[project]
name = "dlt-source-notion"
version = "0.0.2"
description = "A DLT source for notion"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Planet A GmbH", email = "dev@planet-a.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dlt>=1.8.1",
    "pydantic-api-sdk-notion>=0.0.34",
    "pydantic>=2.10.6",
    "pydantic-api-models-notion @ git+https://github.com/stevieflyer/pydantic-api-models-notion.git@050999bc3817422a11edb79835dcd1b48314ab04",
]

[project.optional-dependencies]
show = [
    "dlt[duckdb]>=1.8.1",
    "streamlit>=1.41.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.black]
include = '.*py$'

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
exclude = ["tests"]
